Fix paragraph margins on tablets

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -61,12 +61,25 @@ code {
   text-align: left;
 }
 
+.mdl-grid {
+  max-width: 800px;
+}
+
+// Desktop Paragraph Width
 @media only screen and (min-width: 961px) {
   p {
     margin: 2em auto 0em auto;
   }
 }
 
+// Tablet Paragraph Width
+@media only screen and (max-width: 960px) and (min-width: 401px) {
+  p {
+    margin: 2em 2em 0em 2em;
+  }
+}
+
+// Mobile Paragraph Width
 @media only screen and (max-width: 400px) {
   p {
     margin: 2em 1em 0em 1em;
